examples/bad/09-OutOfScope.tms
void main() {

  string x = "1";
  {
    string y = "2";
  }

  printString(x);
  printString(y);

  return;
}